<resources>
    <string name="app_name">LunchScanner</string>
    <string name="settings">Settings</string>

    <string name="pref_title_rescan">Automatic rescanning</string>
    <string name="pref_title_rescan_time">Result display</string>
    <string-array name="pref_rescan_time_titles">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
    </string-array>
    <string-array name="pref_rescan_time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="import_ongoing">Importing data…</string>
    <string name="error">Error</string>
    <string name="file_not_found">File was not found!</string>
    <string name="gotLunch">Comes for the %d. time</string>
    <string name="delete_data">Delete data</string>
    <string name="lunch_display">Lunch display</string>
    <string name="start_text">In order to import the required CSV file, choose the \'Import / Export\' tab. Now use choose the correspondent type and file and then press \'Start\'. Pressing this button initiates the import. If the import was successful, a corresponding message appears. When the CSV file has been imported, the scanner is ready. Simply press the icon with the camera and the scanner opens, and a meal card can now be scanned. In order to set the interval of the scans, the settings can be opened via the gearwheel.</string>
    <string name="start_title">Use of the scanner</string>
    <string name="delete">Delete</string>
    <string name="delete_request">All meal dates will be removed!\nAre you sure you want to continue?</string>
    <string name="ordered">Ordered</string>
    <string name="got">Served</string>
    <string name="get">To serve</string>
    <string name="S" translatable="false">S</string>
    <string name="B" translatable="false">B</string>
    <string name="A" translatable="false">A</string>
    <string name="choose_allergy">Please select the allergy file!</string>
    <string name="choose_day">Please select the daily file!</string>
    <string name="getLunchA">To serve lunch A</string>
    <string name="getLunchB">To serve lunch B</string>
    <string name="getLunchS">To serve lunch S</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="x_class">%s. grade</string>
    <string name="duplicate_entries">Duplicate entries found!</string>
    <string name="export_lunch_data">Export Lunch Data</string>
    <string name="lunch_export">Lunch data export</string>
    <string name="export_ongoing">Exporting data…</string>
    <string name="pref_play_sound_on_success">Play sound on successful scan</string>
    <string name="title_activity_bottom_nav" translatable="false">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_lunch_list">Lunch List</string>
    <string name="title_import_export">Import / Export</string>
    <string name="title_search">Search</string>
    <string name="help">Help</string>
    <string name="help_display">Help</string>
    <string name="import_lunch_data">Import lunch data</string>
    <string name="import_lunch_data_detail">Updates the lunch database with the data with data for the current day. Replaces the current data.</string>
    <string name="import_allergy_data">Import allergy data</string>
    <string name="import_allergy_data_detail">Updates the allergy database with the data with new data. Replaces the current data.</string>
    <string name="export_lunch_data_detail">Exports the current data, who came to lunch into a file.</string>
    <string name="start">Start</string>
    <string name="import_export_display">Import / Export</string>
    <string name="import_export_type_label">"Type: "</string>
    <string name="file">File</string>
    <string name="choose">Choose</string>
    <string name="error_parameter">Error in parameter transition</string>
    <string name="error_file_not_found">File not found</string>
    <string name="success">Success</string>
    <string name="import_successful">Import successful</string>
    <string name="export_successful">Export successful</string>

</resources>
