<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        app:defaultValue="true"
        app:key="rescan_enabled"
        app:title="@string/pref_title_rescan"
        />
    <ListPreference
        app:dependency="rescan_enabled"
        app:defaultValue="2"
        app:entries="@array/pref_rescan_time_titles"
        app:entryValues="@array/pref_rescan_time_values"
        app:useSimpleSummaryProvider="true"
        app:allowDividerBelow="true"
        app:key="rescan_time"
        app:negativeButtonText="@null"
        app:positiveButtonText="@null"
        app:title="@string/pref_title_rescan_time" />
    <SwitchPreference
        app:defaultValue="true"
        app:key="success_sound"
        app:title="@string/pref_play_sound_on_success" />
</PreferenceScreen>